--- a/backend/package.json
+++ b/backend/package.json
@@ -2,27 +2,23 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/app.js",
   "scripts": {
-    "build": "rimraf build && tsc",
-    "preserve": "npm run build",
-    "dev": "nodemon src/index.ts",
-    "prestart": "npm run build",
-    "start": "ts-node src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tsc && node dist/app.js",
+    "lint": "eslint . --ext .ts"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^4.17.15",
-    "@types/node": "^18.11.18",
-    "tslint": "^6.1.3",
+    "@types/express": "^4.17.16",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
+    "eslint": "^8.32.0",
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "body-parser": "^1.20.1",
-    "pg": "^8.8.0",
-    "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.11"
+    "express": "^4.18.2"
   }
 }
